# build-panel

./: .env.example  .gitignore  API.md  ARCHITECTURE-REVIEW.md  ARCHITECTURE.md  COMPONENTS.md  CONTRIBUTING.md  DATABASE.md  DEPLOY-JAPAN.md  DEPLOYMENT.md  DEVELOPMENT.md  ENV.md  README.md  TEST-REPORT.md  TESTING.md  TODO.md  deploy-japan.sh  deploy-on-japan-server.sh  deploy-production.sh  deploy-remote.sh  deploy-to-japan-test.sh  docker-compose.full.yml  docker-compose.yml  main.db  metadata.json  monitor.sh  package-lock.json  package.json  server.ts  vite.config.ts
.github/workflows/: build.yml  deploy.yml  release.yml  test.yml
.trae/specs/write-comprehensive-documentation/: checklist.md  spec.md  tasks.md
apps/chat-service/: README.md  docker-compose.yml
apps/chat-service/admin/: README.md  index.html  package.json
apps/cms-app/: README.md  docker-compose.yml
apps/cms-app/admin/: Dockerfile  (+3 more)
apps/dbbackup/: .gitignore  README.md  package.json
apps/logcollector/: .gitignore  ARCHITECTURE.md  README.md
apps/polymarket-bot/: .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  start.sh
apps/polymarket-bot/src/: __init__.py  main.py
apps/polymarket-bot/src/api/: __init__.py  polymarket.py
apps/polymarket-bot/src/execution/: __init__.py  executor.py
apps/polymarket-bot/src/models/: __init__.py
apps/polymarket-bot/src/portfolio/: __init__.py  manager.py
apps/polymarket-bot/src/risk/: __init__.py  manager.py
apps/polymarket-bot/src/strategies/: __init__.py  arbitrage.py  base.py  trend.py
apps/polymarket-bot/src/utils/: __init__.py
apps/polymarket-bot/src/wallet/: __init__.py  manager.py
apps/polymarket-bot/src/web/: __init__.py  api.py
apps/polymarket-bot/tests/: test_basic.py
apps/server-manager/: .dockerignore  Dockerfile  README.md  docker-compose.yml
apps/sitemonitor/: README.md  docker-compose.yml
apps/store-app/: README.md  docker-compose.yml
apps/website-template/: README.md  docker-compose.yml
deploy/: README.md  backup.sh  install-agent.sh  nginx-ssl.conf  nginx.conf  prometheus.yml  update.sh
docs/: APPS-ROADMAP.md  ARCHITECTURE.md  B2B-APPS-LIST.md  B2B-SPEC.md  BUSINESS-APPS.md  DEPLOYMENT.md  DESIGN.md  SPEC.md  TASKS.md  WEBSITE-TEMPLATE.md  database-schema.sql  user-guide.md
framework/agent/: Dockerfile  README.md  go.mod  main.go
framework/controller/: .dockerignore  Dockerfile  ormconfig.ts  package-lock.json  package.json
framework/web/: Dockerfile  index.html  nginx.conf  package.json
node-agent/: INSTALL.md  README.md  package.json
node-agent/config/: default.json
node-agent/src/: app-loader.ts  communicator.ts  http-server.ts  index.ts  logger.ts  monitor.ts  types.ts
src/: App.tsx  db.ts
src/components/: ActionButton.tsx  GlobalOnboarding.tsx  Layout.tsx
src/pages/: AdminBilling.tsx  AdminUsers.tsx  ApiServices.tsx  AppStore.tsx  Billing.tsx  ConfigManagement.tsx  Dashboard.tsx  DataManagement.tsx  Login.tsx  LogsMonitoring.tsx  ModularAppCenter.tsx  NodeManagement.tsx  SystemManagement.tsx  TaskManagement.tsx  ThirdPartyIntegrations.tsx  UserSettings.tsx
src/types/: index.ts
src/utils/: errorHandler.ts  errors.ts  logger.ts
(+603 files in other folders)
