[metadata]
name = polymarket-bot
version = 0.1.0
description = Polymarket Trading Bot for BuildAI Platform
author = BuildAI
python_requires = >=3.9

[options]
packages = find:
install_requires =
    fastapi>=0.100.0
    uvicorn>=0.23.0
    web3>=6.0.0
    requests>=2.31.0
    aiohttp>=3.8.0
    pandas>=2.0.0
    numpy>=1.24.0
    schedule>=1.2.0
    python-dotenv>=1.0.0
    loguru>=0.7.0
    httpx>=0.24.0
    pyyaml>=6.0.0
    prometheus-client>=0.17.0
    cryptography>=41.0.0
    pydantic>=2.0.0
    pytest>=7.0.0

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
